--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "yan.js",
   "scripts": {
-    "dev": "watchify src/yan.js -t [ reactify --es6 ] -o dist/bundle.js --standalone Yan -d",
-    "dist": "browserify src/yan.js -t [ reactify --es6 ] -g uglifyify -o dist/bundle.min.js --standalone Yan"
+    "dev": "watchify src/yan.js -t reactify -t babelify  -o dist/bundle.js --standalone Yan",
+    "dist": "browserify src/yan.js -t reactify -t babelify -g uglifyify -o dist/bundle.min.js --standalone Yan"
   },
   "dependencies": {
     "uniq": "~1.0.1",
@@ -12,6 +12,7 @@
     "browserify": "~9.0.3",
     "reactify": "~1.0.0",
     "uglifyify": "~3.0.1",
-    "watchify": "~2.4.0"
+    "watchify": "~2.4.0",
+    "babelify": "~5.0.3"
   }
 }
